# helium-os

./: .gitignore  gdb.sh  startup.sh
os/: Cargo.toml  Makefile  build.rs
os/.cargo/: config.toml
os/linker/: linker.ld
os/src/: batch.rs  entry.asm  lang_items.rs  link_app.S  loader.rs  main.rs  sbi.rs  stdout.rs  sync.rs  task.rs  task.s  trap.S  trap.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
std/: Cargo.toml  Makefile  build.rs
std/.cargo/: config.toml
std/linker/: linker_std.ld
std/src/: lang_items.rs  lib.rs  linker.ld  stdout.rs  syscall.rs
