[package]
name = "helium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# std = { path = "../crates/std" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
# riscv = { version = "0.10.1", features = ["inline-asm"] }
riscv = "0.10.1"
sbi-rt = { version = "0.0.2", features = ["legacy"] }

[profile.release]
debug = true
